--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,43 @@ body {
     margin: 0 auto;
     padding: 20px;
 }
+/* Стили для модального окна */
+.modal {
+    display: block !important;
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Полупрозрачный черный цвет */
+    overflow: auto; /* Добавляет прокрутку, если содержимое превышает размер окна */
+}
+
+/* Стили для содержимого модального окна */
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% отступ от верхнего края страницы */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Ширина содержимого */
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); /* Эффект тени */
+}
+
+/* Стиль для кнопки закрытия модального окна */
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
 
 .card {
     background-color: #fff;
